--- a/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/menu.html
+++ b/ide/ui/ide-core/src/main/resources/ide-core/ui/tmpl/menu.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container-flex">
 		<div class="navbar-header">
-			<p class="navbar-brand" style="font-family: Trebuchet MS" href="#">
-					<i class="fa fa-cloud"></i>&nbsp;{{branding.brand}}
+			<p class="navbar-brand" href="#">
+					&nbsp;<i class="fa fa-cloud"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{branding.brand}}
  			</p>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
