--- a/ide/ui/ide-registry/src/main/resources/ide-registry/registry.html
+++ b/ide/ui/ide-registry/src/main/resources/ide-registry/registry.html
@@ -45,9 +45,11 @@
 <body border="1px" ng-app="registry" ng-controller="RegistryController as registry">
 
 	<div>
+	  <div class="btn-toolbar-top">
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
-			<button type="button" class="btn btn-default" title="Refresh" ng-click="registry.refresh()"><i class="fa fa-refresh"></i></button>
+			<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="registry.refresh()"><i class="fa fa-refresh"></i></button>
 		</div>
+	  </div>
 	</div>
 	
 	<div class="registry"></div>
