--- a/ide/ui/ide-repository/src/main/resources/ide-repository/repository.html
+++ b/ide/ui/ide-repository/src/main/resources/ide-repository/repository.html
@@ -45,10 +45,12 @@
 <body border="1px" ng-app="repository" ng-controller="RepositoryController as repository">
 
 	<div>
+	  <div class="btn-toolbar-top">
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
-			<button type="button" class="btn btn-default" title="Export" ng-click="repository.exportRepository()"><i class="fa fa-download"></i></button>
-			<button type="button" class="btn btn-default" title="Refresh" ng-click="repository.refresh()"><i class="fa fa-refresh"></i></button>
+			<button type="button" class="btn btn-default btn-top" title="Export" ng-click="repository.exportRepository()"><i class="fa fa-download"></i></button>
+			<button type="button" class="btn btn-default btn-top" title="Refresh" ng-click="repository.refresh()"><i class="fa fa-refresh"></i></button>
 		</div>
+	  </div>
 	</div>
 	
 	<div class="repository"></div>
