--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -96,6 +96,12 @@
 					<input class="form-control" type="password" placeholder="" ng-model="workspace.password" required="required">
 				</div>
 			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Project Name</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="myproject (for bare repository)" ng-model="workspace.projectName" required="required">
+				</div>
+			</div>
 	    </div>
 	    <div class="modal-footer">
 	      <button class="btn btn-primary" ng-click="workspace.okClone()" data-toggle="modal" data-target="#dialogClone">Clone</button>
