hardcoded changes for support of xsjs

--- a/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
+++ b/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
@@ -101,6 +101,8 @@
 					return 'application/json';
 				} else if (fileName.endsWith('.command')) {
 					return 'application/json';
+				} else if (fileName.endsWith('.xsjs')) {
+					return 'application/javascript';
 				}
 				return 'plain/text';
 			}
