--- a/ide/ui/ide-bpm/src/main/resources/ide-bpm/index.html
+++ b/ide/ui/ide-bpm/src/main/resources/ide-bpm/index.html
@@ -233,5 +233,11 @@
 <!-- Integration extensions -->
 <script src="scripts/resource-loader.js?v=2" app="editor"></script>
 
+<script src="../../../../services/v3/web/ide-core/ui/message-hub.js"></script>
+<script>
+var messageHub = new FramesMessageHub();
+window.messageHub = messageHub;
+</script>
+
 </body>
 </html>
