--- a/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
+++ b/ide/ui/ide-git/src/main/resources/ide-git/git/git.html
@@ -97,6 +97,12 @@
 				</div>
 			</div>
 			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Branch</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
+				</div>
+			</div>
+			<div class="form-group row">
 				<label class="col-xs-3 col-form-label">Project Name</label>
 				<div class="col-xs-5">
 					<input class="form-control" type="text" placeholder="myproject (for bare repository)" ng-model="workspace.projectName" required="required">
@@ -130,6 +136,12 @@
 					<input class="form-control" type="password" placeholder="" ng-model="workspace.password" required="required">
 				</div>
 			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Branch</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
+				</div>
+			</div>
 	    </div>
 	    <div class="modal-footer">
 	      <button class="btn btn-primary" ng-click="workspace.okPullAll()" data-toggle="modal" data-target="#dialogPullAll">Pull All</button>
@@ -156,6 +168,12 @@
 				<label class="col-xs-3 col-form-label">Password</label>
 				<div class="col-xs-5">
 					<input class="form-control" type="password" placeholder="" ng-model="workspace.password" required="required">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Branch</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
 				</div>
 			</div>
 	    </div>
@@ -236,6 +254,12 @@
 				<label class="col-xs-3 col-form-label">e-mail</label>
 				<div class="col-xs-6">
 					<input class="form-control" type="text" placeholder="" ng-model="workspace.email" required="required">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label class="col-xs-3 col-form-label">Branch</label>
+				<div class="col-xs-5">
+					<input class="form-control" type="text" placeholder="" ng-model="workspace.branch" required="required">
 				</div>
 			</div>
 	    </div>
