primary entity type by default

--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -115,7 +115,7 @@
 					<div class="row">
 						<label class="col-xs-3 col-form-label">Type: </label>
 						<div class="col-xs-5">
-							<select class="form-control" name="entityType" id="entityType" ng-model="ctrl.$scope.$parent.cell.value.type">
+							<select class="form-control" name="entityType" id="entityType" ng-model="ctrl.$scope.$parent.cell.value.entityType">
 						    	<option ng-repeat="option in ctrl.entityTypes" value="{{option.key}}">{{option.label}}</option>
 						    </select>
 						</div>
