added header for editor mode

--- a/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
+++ b/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
@@ -64,6 +64,7 @@
 			function getResource(resourcePath) {
 		        var xhr = new XMLHttpRequest();
 		        xhr.open('GET', resourcePath, false);
+		        xhr.setRequestHeader('Dirigible-Editor', 'Orion');
 		        xhr.send();
 		        if (xhr.status === 200) {
 		        	return xhr.responseText;
@@ -195,6 +196,7 @@
 				if (file) {
 					var xhr = new XMLHttpRequest();
 					xhr.open('PUT', '../../../../services/v4/ide/workspaces' + file);
+					xhr.setRequestHeader('Dirigible-Editor', 'Orion');
 					xhr.setRequestHeader('X-Requested-With', 'Fetch');
 					xhr.onreadystatechange = function() {
 						if (xhr.readyState === 4) {
