--- a/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
+++ b/ide/ui/ide-entity/src/main/resources/ide-entity/modeler.html
@@ -314,6 +314,12 @@
 							<input class="form-control" type="text" placeholder="0" ng-model="ctrl.$scope.$parent.cell.value.dataScale" required="required">
 						</div>
 					</div>
+					<div class="row">
+						<label class="col-xs-3 col-form-label">Default Value: </label>
+						<div class="col-xs-6">
+							<input class="form-control" type="text" placeholder="default value" ng-model="ctrl.$scope.$parent.cell.value.dataDefaultValue" required="required">
+						</div>
+					</div>
 				  </div>
 			    </div>
 			    <div id="uiProperty" class="tab-pane fade">
