--- a/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
+++ b/ide/ui/ide-database/src/main/resources/ide-database/sql/result.html
@@ -99,7 +99,7 @@
 								}
 								break;
 							}
-						} else if (result != null && result.errorMessage != null) {
+						} else if (result !== null && result.errorMessage !== null) {
 							$scope.result = result.errorMessage;
 						} else {
 							$scope.result = 'No result';
