--- a/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
+++ b/ide/ui/ide-orion/src/main/resources/ide-orion/editor.html
@@ -66,6 +66,7 @@
 		        var xhr = new XMLHttpRequest();
 		        xhr.open('GET', resourcePath, false);
 		        xhr.setRequestHeader('X-CSRF-Token', 'Fetch');
+		        xhr.setRequestHeader('Dirigible-Editor', 'Orion');
 		        xhr.send();
 		        if (xhr.status === 200) {
 		        	csrfToken = xhr.getResponseHeader("x-csrf-token");
@@ -198,6 +199,7 @@
 					xhr.open('PUT', '../../../../services/v4/ide/workspaces' + file);
 					xhr.setRequestHeader('X-Requested-With', 'Fetch');
 					xhr.setRequestHeader('X-CSRF-Token', csrfToken);
+					xhr.setRequestHeader('Dirigible-Editor', 'Orion');
 					xhr.onreadystatechange = function() {
 						if (xhr.readyState === 4) {
 							dirty = false;
