--- a/ide/ui/ide-data-structures/src/main/resources/ide-data-structures/editors/table/editor.html
+++ b/ide/ui/ide-data-structures/src/main/resources/ide-data-structures/editors/table/editor.html
@@ -33,7 +33,7 @@
 			
 			
 			<div class="container">
-				<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right">New</button>
+				<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-outline-primary pull-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
 				<table class="table product-table">
 					<thead>
 						<tr>
