--- a/ide/ui/ide-security/src/main/resources/ide-security/editors/access/editor.html
+++ b/ide/ui/ide-security/src/main/resources/ide-security/editors/access/editor.html
@@ -23,7 +23,7 @@
 		</div>
 		<form>
 			<div class="container">
-				<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-primary pull-right">New</button>
+				<button type="button" ng-click="openNewDialog()" class="btn btn-lg btn-outline-primary pull-right"><i class="fa fa-plus" aria-hidden="true"></i></button>
 				<table class="table product-table">
 					<thead>
 						<tr>
