--- a/ide/ui/ide-security/src/main/resources/ide-security/editors/access/editor.html
+++ b/ide/ui/ide-security/src/main/resources/ide-security/editors/access/editor.html
@@ -103,7 +103,7 @@
 					<button type="button" class="btn btn-primary" ng-show="actionType === 'new'" ng-click="create()">Save</button>
 					<button type="button" class="btn btn-primary" ng-show="actionType === 'update'" ng-click="update()">Update</button>
 					<button type="button" class="btn btn-primary" ng-show="actionType === 'delete'" ng-click="delete()">Delete</button>
-					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+					<button type="button" class="btn" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
