--- a/ide/ui/ide-deploy-manager/src/main/resources/ide-deploy-manager/index.html
+++ b/ide/ui/ide-deploy-manager/src/main/resources/ide-deploy-manager/index.html
@@ -90,7 +90,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary" ng-click="addInstance()">Add</button>
-					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+					<button type="button" class="btn" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
